# design2web

./: 404.html  README.md  color_extractor.py  html_generator.py  image_loader.py  index.html  journal-design2web.mdx  main.py  mkdocs.yml  output_writer.py  pyproject.toml  requirements.txt  sitemap.xml
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  reference.md  research.md
docs/getting-started/: installation.md  quick-start.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
paper/: main.aux  main.out  main.tex
reference/: index.html
research/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_color_extractor.py  test_html_generator.py  test_image_loader.py  test_integration.py  test_layout_detector.py  test_main.py  test_output_writer.py  test_types.py
tests/fixtures/: __init__.py
