[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "design2web"
version = "0.1.0"
description = "Converts static design mockups (PNG/JPG) into runnable HTML/CSS web pages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Young", email = "research@automate-capture.com" },
]
keywords = ["web-generation", "ui-to-code", "design-to-html", "ai-design", "frontend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/Lumi-node/design2web"
Documentation = "https://lumi-node.github.io/design2web/"
Repository = "https://github.com/Lumi-node/design2web"
Issues = "https://github.com/Lumi-node/design2web/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
